k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-dep
  labels:
    app: test-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: test-app
        image: test-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
