k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app-ingress
  namespace: test-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: test.k8s.orb.local
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: node-svc
                port:
                  number: 80
            path: /
